# quick-protobuf

quick-protobuf/: Cargo.toml
