[package]
name = "quick-protobuf"
description = "A pure Rust protobuf (de)serializer. Quick."
version = "0.6.3"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser"]
license = "MIT"
readme = "README.md" 
documentation = "https://docs.rs/quick-protobuf"
repository = "https://github.com/tafia/quick-protobuf"
edition = "2018"

[dependencies]
byteorder = "1.2.4"
failure = { version = "0.1.1", default-features = false, features = ["derive"] }
failure_derive = "0.1.1"

[dev-dependencies]
lazy_static = "0.2.10"

[features]
default = ["backtrace"]
backtrace = ["failure/std"]
